--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                             <img src="assets/img/github.jpeg" width="20px" style="margin-bottom:-3px">
                             GitHub (preminstrel)
                         </a><br>
+                        <a href="https://scholar.google.com/citations?user=BjQHEh8AAAAJ&hl=en">
+                            <img src="assets/img/google-scholar.png" width="20px" style="margin-bottom:-3px">
+                            Google Scholar
+                        </a><br>
                         <a href="https://www.linkedin.com/in/hanshi-sun-5b74b8228/" target="blank">
                             <img src="assets/img/LinkedIn.png" width="20px" style="margin-bottom:-3px">
                             LinkedIn
@@ -162,7 +166,7 @@
                     <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
                     <p><i>Conference on Language Modeling (COLM)</i>, 2024</p><br>
                     <p>
-                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">demo</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/TriForce%3A-Lossless-Acceleration-of-Long-Sequence-Sun-Chen/d0deaec3e1f74701ac43600d9e64c5c969be7391"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d0deaec3e1f74701ac43600d9e64c5c969be7391?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">demo</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Training-free Lossless Long Sequence Generation Acceleration</p>
@@ -185,7 +189,7 @@
                     <br>
                     <p><i>Computer Vision and Pattern Recognition (CVPR) Workshop</i>, 2024</p><br>
                     <p>
-                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/BMAD%3A-Benchmarks-for-Medical-Anomaly-Detection-Bao-Sun/d935b0570f3789c96ea34a8609d78e8699f7bc68"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d935b0570f3789c96ea34a8609d78e8699f7bc68?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>This benchmark encompasses six reorganized datasets from five medical domains (i.e. brain MRI, liver CT, retinal OCT, chest X-ray, and digital histopathology) and three key evaluation metrics, and includes a total of fourteen state-of-the-art AD algorithms.</p>
@@ -229,7 +233,7 @@
                     <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
                     <p><i>Conference on Language Modeling (COLM)</i>, 2024</p><br>
                     <p>
-                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">demo</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/TriForce%3A-Lossless-Acceleration-of-Long-Sequence-Sun-Chen/d0deaec3e1f74701ac43600d9e64c5c969be7391"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d0deaec3e1f74701ac43600d9e64c5c969be7391?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">demo</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Training-free Lossless Long Sequence Generation Acceleration</p>
@@ -252,7 +256,7 @@
                     <br>
                     <p><i>Computer Vision and Pattern Recognition (CVPR) Workshop</i>, 2024</p><br>
                     <p>
-                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/BMAD%3A-Benchmarks-for-Medical-Anomaly-Detection-Bao-Sun/d935b0570f3789c96ea34a8609d78e8699f7bc68"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d935b0570f3789c96ea34a8609d78e8699f7bc68?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>This benchmark encompasses six reorganized datasets from five medical domains (i.e. brain MRI, liver CT, retinal OCT, chest X-ray, and digital histopathology) and three key evaluation metrics, and includes a total of fourteen state-of-the-art AD algorithms.</p>
@@ -273,7 +277,7 @@
                     <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, <a href="https://huangleibuaa.github.io">Lei Huang</a>, <a href="https://taozh2017.github.io">Tao Zhou</a> and <strong>Hanshi Sun</strong><br>
                     <i>Future Generation Computer Systems (FGCS)</i>, 2023<br><br>
                     <p>
-                        <a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a> / <a href="bibtex/zhou2023combating.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/Combating-medical-noisy-labels-by-disentangled-and-Zhou-Huang/e1fb1b7fc51dd04b2a9db6b846938c6e7d636ba8"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/e1fb1b7fc51dd04b2a9db6b846938c6e7d636ba8?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a> / <a href="bibtex/zhou2023combating.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Disentangled distribution learning reduces effect of label uncertainty and ambiguity</p>
@@ -298,7 +302,7 @@
                     <p>
                         <a href="https://preminstrel.github.io/ECG-Classification/" target="blank">website</a> / 
                         <a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a> / 
-                        <a href="https://github.com/preminstrel/ECG-Classification" target="blank">code <img src="https://img.shields.io/github/stars/preminstrel/ECG-Classification?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2021arrhythmia.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/Arrhythmia-Classifier-Using-Convolutional-Neural-Sun-Wang/14b3ee81e4186b92107cc9ad40f39f4c1ac8fda4"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/14b3ee81e4186b92107cc9ad40f39f4c1ac8fda4?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://github.com/preminstrel/ECG-Classification" target="blank">code <img src="https://img.shields.io/github/stars/preminstrel/ECG-Classification?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2021arrhythmia.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Present a 1-D adaptive loss-aware quantization, achieving a high compression rate that reduces memory consumption by 23.36x</p>
