--- a/index.html
+++ b/index.html
@@ -169,15 +169,14 @@
                     <img src="assets/img/specrej.png" width="400px">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                    <a href="https://preminstrel.com" target="blank"><b>Fast Best-of-N Decoding via Speculative Rejection
+                    <a href="https://Zanette-Labs.github.io/SpeculativeRejection" target="blank"><b>Fast Best-of-N Decoding via Speculative Rejection
                     </b></a><br>
                     <br>
-                    <strong>Hanshi Sun*</strong>, Momin Haider*, <a href="https://rqzhangberkeley.github.io/">Ruiqi Zhang*</a>, Huitao Yang, <a href="https://mingyin0312.github.io/">Ming Yin</a>, <a href="https://mwang.princeton.edu/">Mengdi Wang</a>, <a href="https://people.eecs.berkeley.edu/~bartlett/">Peter Bartlett</a>, and <a href="https://azanette.com/">Andrea Zanette*</a> (* for core authors)
+                    <strong>Hanshi Sun*</strong>, Momin Haider*, <a href="https://rqzhangberkeley.github.io/">Ruiqi Zhang*</a>, Huitao Yang, <a href="https://ece.princeton.edu/people/jiahao-qiu">Jiahao Qiu</a>, <a href="https://mingyin0312.github.io/">Ming Yin</a>, <a href="https://mwang.princeton.edu/">Mengdi Wang</a>, <a href="https://people.eecs.berkeley.edu/~bartlett/">Peter Bartlett</a>, and <a href="https://azanette.com/">Andrea Zanette*</a> (* for core authors)
                     <br><br>
                     <p><i>Conference on Neural Information Processing Systems (NeurIPS)</i>, 2024</p><br>
                     <p>
-                        <!-- <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://github.com/XX/XX" target="blank">code <img src="https://img.shields.io/github/stars/XX/XX?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a> -->
-                        To appear
+                        <a href="https://arxiv.org/pdf/2410.20290.pdf" target="blank">arXiv</a> / <a href="https://Zanette-Labs.github.io/SpeculativeRejection" target="blank">website</a> / <a href="https://github.com/Zanette-Labs/SpeculativeRejection" target="blank">code <img src="https://img.shields.io/github/stars/Zanette-Labs/SpeculativeRejection?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2024fast.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Fast Inference-time Aligment Algorithm</p>
@@ -286,15 +285,14 @@
                     <img src="assets/img/specrej.png" width="400px">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                    <a href="https://preminstrel.com" target="blank"><b>Fast Best-of-N Decoding via Speculative Rejection
+                    <a href="https://Zanette-Labs.github.io/SpeculativeRejection" target="blank"><b>Fast Best-of-N Decoding via Speculative Rejection
                     </b></a><br>
                     <br>
-                    <strong>Hanshi Sun*</strong>, Momin Haider*, <a href="https://rqzhangberkeley.github.io/">Ruiqi Zhang*</a>, Huitao Yang, <a href="https://mingyin0312.github.io/">Ming Yin</a>, <a href="https://mwang.princeton.edu/">Mengdi Wang</a>, <a href="https://people.eecs.berkeley.edu/~bartlett/">Peter Bartlett</a>, and <a href="https://azanette.com/">Andrea Zanette*</a> (* for core authors)
+                    <strong>Hanshi Sun*</strong>, Momin Haider*, <a href="https://rqzhangberkeley.github.io/">Ruiqi Zhang*</a>, Huitao Yang, <a href="https://ece.princeton.edu/people/jiahao-qiu">Jiahao Qiu</a>, <a href="https://mingyin0312.github.io/">Ming Yin</a>, <a href="https://mwang.princeton.edu/">Mengdi Wang</a>, <a href="https://people.eecs.berkeley.edu/~bartlett/">Peter Bartlett</a>, and <a href="https://azanette.com/">Andrea Zanette*</a> (* for core authors)
                     <br><br>
                     <p><i>Conference on Neural Information Processing Systems (NeurIPS)</i>, 2024</p><br>
                     <p>
-                        <!-- <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://github.com/XX/XX" target="blank">code <img src="https://img.shields.io/github/stars/XX/XX?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a> -->
-                        To appear
+                        <a href="https://arxiv.org/pdf/2410.20290.pdf" target="blank">arXiv</a> / <a href="https://Zanette-Labs.github.io/SpeculativeRejection" target="blank">website</a> / <a href="https://github.com/Zanette-Labs/SpeculativeRejection" target="blank">code <img src="https://img.shields.io/github/stars/Zanette-Labs/SpeculativeRejection?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2024fast.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Fast Inference-time Aligment Algorithm</p>
