--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <ul>
         <div style="height:170px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
-                <p style="line-height: 1.5;">[2024/10/01] Our Speculative Rejection has been accepted by <a href="https://nips.cc/" target="blank"><img src="assets/img/NeurIPS logo.svg" width="28px" style="vertical-align:middle"> NeurIPS 2024</a>! See you in Vancouver!
+                <p style="line-height: 1.5;">[2024/10/01] Our <a href="https://Zanette-Labs.github.io/SpeculativeRejection" target="blank">Speculative Rejection</a> has been accepted by <a href="https://nips.cc/" target="blank"><img src="assets/img/NeurIPS logo.svg" width="28px" style="vertical-align:middle"> NeurIPS 2024</a>! See you in Vancouver!
                 </p>
             </li>
             <li>
