--- a/index.html
+++ b/index.html
@@ -259,15 +259,14 @@
                     <img src="assets/img/shadowkv_sys.png" width="400px">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                    <a href="https://preminstrel.com" target="blank"><b><img src="assets/img/ShadowKV.png" width="24px"> ShadowKV: KV Cache in Shadows for High-Throughput Long-Context LLM Inference</a>
+                    <a href="https://bytedance.github.io/ShadowKV/" target="blank"><b><img src="assets/img/ShadowKV.png" width="24px"> ShadowKV: KV Cache in Shadows for High-Throughput Long-Context LLM Inference</a>
                     </b> <br>
                     <br>
                     <strong>Hanshi Sun</strong>, <a href="https://lchang20.github.io/">Li-Wen Chang</a>, <a href="https://sites.google.com/view/wenleibao/">Wenlei Bao</a>, <a href="https://sizezheng.github.io/">Size Zheng</a>, <a href="https://zheng-ningxin.github.io/">Ningxin Zheng</a>, <a href="https://scholar.google.com/citations?user=ZMfk2F8AAAAJ&hl=zh-CN">Xin Liu</a>, <a href="https://www.andrew.cmu.edu/user/harryd/">Harry Dong</a>, <a href="https://users.ece.cmu.edu/~yuejiec/index.html">Yuejie Chi</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>
                     <br><br>
                     <p><i>ArXiv</i>, 2024</p><br>
                     <p>
-                        <!-- <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://github.com/bytedance/shadowkv" target="blank">code <img src="https://img.shields.io/github/stars/bytedance/shadowkv?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a> -->
-                        To appear
+                        <a href="https://arxiv.org/pdf/2410.21465.pdf" target="blank">arXiv</a> / <a href="https://bytedance.github.io/ShadowKV/" target="blank">website</a> / <a href="https://github.com/bytedance/ShadowKV" target="blank">code <img src="https://img.shields.io/github/stars/bytedance/ShadowKV?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2024shadowkv.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>High-Throughput Long-Context LLM Inference System</p>
